--- a/assets/scss/layout/_navbar.scss
+++ b/assets/scss/layout/_navbar.scss
@@ -49,13 +49,16 @@
     margin-left: auto;
 
     nav {
+      height: 100%;
       position: static;
       background-color: transparent;
       width: auto;
       overflow: hidden;
 
       ul {
+        height: 100%;
         flex-direction: row;
+        align-items: center;
         padding: 0;
         gap: 1rem;
 
